@@ -23,13 +23,16 @@
 package adhoc.area;
 
 import adhoc.area.dto.AreaDto;
+import adhoc.objective.Objective;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
+import java.util.Collection;
+import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Set;
 
 @Transactional
 @Service
@@ -41,10 +44,24 @@ public class ManagerAreaService {
     private final AreaService areaService;
 
     public List<AreaDto> updateServerAreas(Long serverId, List<AreaDto> areaDtos) {
-        return areaDtos.stream()
+        Set<Long> areaIds = new HashSet<>();
+
+        List<AreaDto> result = areaDtos.stream()
                 .map(areaService::toEntity)
                 .map(areaRepository::save)
+                .peek(area -> areaIds.add(area.getId()))
                 .map(areaService::toDto)
-                .collect(Collectors.toList());
+                .toList();
+
+        // TODO
+        Collection<Area> areasToDelete = areaRepository.findAllByIdNotIn(areaIds);
+        for (Area areaToDelete : areasToDelete) {
+            for (Objective orphanedObjective : areaToDelete.getObjectives()) {
+                orphanedObjective.setArea(null);
+            }
+        }
+        areaRepository.deleteAll(areasToDelete);
+
+        return result;
     }
 }
